# auto-memory-claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  UPGRADE-CLAUDE-CODE.md  UPGRADE-COPILOT-CLI.md  claude-code-instructions-template.md  copilot-instructions-template.md  install.sh  pyproject.toml
deploy/: claude-code-hook.json  install.md
docs/: blog-why-auto-memory.md
polish/: findings.md
src/auto_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/session_recall/: __main__.py
src/session_recall/backends/: __init__.py  claude_code.py  copilot.py
src/session_recall/commands/: checkpoints.py  files.py  health.py  ingest.py  list_sessions.py  schema_check_cmd.py  search.py  show_session.py
src/session_recall/db/: connect.py  schema_check.py
src/session_recall/health/: dim_corpus.py  dim_e2e.py  dim_freshness.py  dim_ingest.py  dim_latency.py  dim_repo_coverage.py  dim_schema.py  dim_summary_coverage.py
src/session_recall/ingest/: __init__.py  jsonl_reader.py  run.py  schema.py  session_builder.py
src/session_recall/tests/: test_backends.py  test_brief_flag.py  test_commands_against_claude_index.py  test_dim_corpus.py  test_dim_disclosure.py  test_dim_repo_coverage.py  test_ingest_jsonl_reader.py  test_ingest_run.py  test_list_sessions.py  test_parser.py  test_search_sanitize.py  test_telemetry.py
src/session_recall/tests/fixtures/: claude_session.jsonl
src/session_recall/util/: detect_repo.py  format_output.py  telemetry.py
