[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-memory"
version = "0.2.0"
description = "Your AI coding agent never forgets — progressive session recall for Claude Code and GitHub Copilot CLI"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Desi Villanueva (original creator)"}]
maintainers = [{name = "Fork maintainer (goldfingerfif)"}]
readme = "README.md"
keywords = ["session", "recall", "context", "memory", "cli", "claude", "copilot", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
session-recall = "session_recall.__main__:main"

[project.urls]
Homepage = "https://github.com/goldfingerfif/auto-memory-claude"
Repository = "https://github.com/goldfingerfif/auto-memory-claude"
Issues = "https://github.com/goldfingerfif/auto-memory-claude/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
# E701/E702 are intentionally allowed: the project's TypedDict definitions in
# src/session_recall/types.py and one-line conditional assigns in util/telemetry.py
# use compact syntax to honor the "≤80 lines/file" guidance from CONTRIBUTING.md.
extend-ignore = ["E701", "E702"]
